fix java 9+ warning